# security-project

./: .gitignore  README.md  codex_reply.md
app/vuln-pipeline/: README.md  pyproject.toml
app/vuln-pipeline/.venv311/: pyvenv.cfg
app/vuln-pipeline/.venv311/Scripts/: activate  activate.bat
app/vuln-pipeline/tests/: test_fixture_smoke_e2e.py  test_ready1_smoke.py
app/vuln-pipeline/tests/fixtures/synthetic/: README.md
app/vuln-pipeline/vuln_pipeline/: __init__.py  contracts.py
app/vuln-pipeline/vuln_pipeline.egg-info/: PKG-INFO  SOURCES.txt
app/vuln-pipeline/vuln_pipeline/cli/: __init__.py  main.py
apps/: README.md
apps/report-automation/: README.md
apps/report-template/: README.md  build_report.py
archive/: README.md
assets/: README.md
assets/icons/: README.md
assets/logos/: README.md
assets/sample-data/: README.md
automation/: ALLOWLIST_TEST.md  CHANGE_SCOPE_TEST.md  CHANGE_SCOPE_TEST_2.md  DISALLOWED_SCOPE_TEST.md  JSON_STATE_TEST.md  README.md  REVIEWER_STATE_TEST.md  WRITE_MODE_TEST.md  chatgpt_codex_assist.py  chatgpt_codex_loop.py  orchestrator.py  task.txt
automation/loop.backup.20260321_234257/: state.json
automation/loop.bak.20260321_224931/: state.json
docs/: README.md  READY_EXECUTION_CONTRACT.md  canonical-ready-blocker-handoff.md  canonical-ready-blocker-outbox.md  hexstrike-live-promotion-policy.md  hexstrike-live-review-workflow.md  hexstrike-live-shape-analysis.md  hexstrike-runtime-baseline.md
engagements/: README.md
intake/: README.md
outputs/: README.md
scripts/: README.md
shared/: README.md
(+375 files in other folders)
